Compilation with JDK11 fixed